# beta

./: README.rst  app.py  configs.py  pyproject.toml
beta/beta/: settings.py  urls.py
beta/main/: forms.py  models.py  urls.py  views.py
beta/main/migrations/: 0001_initial.py  0002_auto_20210719_2147.py
beta/main/static/main/scripts/: generator.py
beta/main/static/main/stylesheets/: index.style.css
beta/main/templates/main/: appBrowse.html  appDelete.html  appList.html  application.html  back-link.html  head-wrapper.html  header.html  index.html  register.html
beta/main/tests/: tests.py
beta/stats/: urls.py  views.py
beta/stats/dash_apps/: pieChart.py
beta/stats/templates/stats/: index.html  navbar.html  pieChart.html
